--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,13 @@
     "module": "NodeNext",
     "noUnusedLocals": false, // 사용되지 않는 지역 변수 경고 끄기
     "noUnusedParameters": false, // 사용되지 않는 함수 매개변수 경고 끄기
+
+    "moduleResolution": "NodeNext",
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+
     "strict": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
