--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
+    "target": "ESNext",
+    "module": "NodeNext",
+    "noUnusedLocals": false, // 사용되지 않는 지역 변수 경고 끄기
+    "noUnusedParameters": false, // 사용되지 않는 함수 매개변수 경고 끄기
+
+    "moduleResolution": "NodeNext",
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "sourceMap": true
-  }
+    "emitDecoratorMetadata": true,
+
+    "strict": true,
+    "verbatimModuleSyntax": true,
+    "skipLibCheck": true,
+    "types": ["node"],
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
+    "outDir": "./dist"
+  },
+  "exclude": ["node_modules"]
 }
